Attempt at use local time and set notifications to be grey

--- a/views/clientsList.ejs
+++ b/views/clientsList.ejs
@@ -149,8 +149,8 @@ $(function ()
                 <td><a href="/profile/${client.user_id}">${client.username}</a></td>
                 <td><a href="/editor/${client.roomId}" target="_blank">${client.roomId}</a></td>
                 <td>${client.namespace}</td>
-                <td>${moment(client.connectedTime, "YYYY MM DD, h:mm:ss a").fromNow()}</td>
-                <td>${moment(client.lastUpdateTime, "YYYY MM DD, h:mm:ss a").fromNow()}</td>
+                <td>${moment(client.connectedTime, "YYYY MM DD, h:mm:ss a").local().fromNow()}</td>
+                <td>${moment(client.lastUpdateTime, "YYYY MM DD, h:mm:ss a").local().fromNow()}</td>
                 <td>${client.remoteAddress}</td>
             </tr>
             `);
