--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,7 +6,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">syncpad server</a>
+      <a class="navbar-brand" href="#">syncpad server v<%= version %></a>
     </div>
     
     <div class="collapse navbar-collapse" id="myNavbar">
@@ -22,6 +22,9 @@
 
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <% if (user) { %>
+        <p class="navbar-text navbar-left">Signed in as <%= user.username %></p>
+        <% } %>
         <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Log Out</a></li>
       </ul>
     </div>
