--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="/">Home</a></li>
         <li><a href="/profile">My Profile</a></li>
-        <li><a href="/editor">Editor (Alpha)</a></li>
+        <li><a href="/editor">Create Editor</a></li>
 
         <% if (user.role == 'admin') { %>
           <li><a href="/users">User List</a></li>
