Fix issue where user profile incorrectly displayed their role.

--- a/views/editUser.ejs
+++ b/views/editUser.ejs
@@ -78,8 +78,8 @@
                                     <td class="col-md-1"><small>Role</small></td>
                                     <td class="col-md-11">
                                         <select class="form-control" id="role">
-                                            <option <% if (user.role == 'user') { %>selected<% } %>>user</option>
-                                            <option <% if (user.role == 'admin') { %>selected<% } %>>admin</option>
+                                            <option <% if (edit_user.role == 'user') { %>selected<% } %>>user</option>
+                                            <option <% if (edit_user.role == 'admin') { %>selected<% } %>>admin</option>
                                         </select>
                                     </td>
                                 </tr>
