Change role structure to include guests

--- a/views/editUser.ejs
+++ b/views/editUser.ejs
@@ -80,6 +80,7 @@
                                         <select class="form-control" id="role">
                                             <option <% if (edit_user.role == 'user') { %>selected<% } %>>user</option>
                                             <option <% if (edit_user.role == 'admin') { %>selected<% } %>>admin</option>
+                                            <option <% if (edit_user.role == 'guest') { %>selected<% } %>>guest</option>
                                         </select>
                                     </td>
                                 </tr>
