--- a/views/clientsList.ejs
+++ b/views/clientsList.ejs
@@ -23,6 +23,7 @@
     
     <script src="/js/jquery.validate.js"></script>
     <script src="/js/additional-methods.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
     <script src="/js/moment.js"></script>
     
     <link rel="stylesheet" href="/css/bootstrap.min.css">
