--- a/views/home.ejs
+++ b/views/home.ejs
@@ -35,6 +35,7 @@
     
     <script src="/js/jquery.validate.js"></script>
     <script src="/js/additional-methods.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
     
     <link rel="stylesheet" href="/css/bootstrap.min.css">
   </head>
@@ -84,7 +85,6 @@
             <br/><br/>
             <br/><br/>
 		</div>
-
         <%- include('partials/footer', {user: user}) %>
 	</body>
 </html>
