--- a/views/login.ejs
+++ b/views/login.ejs
@@ -29,7 +29,7 @@
     
     <script src="/js/jquery.validate.js"></script>
     <script src="/js/additional-methods.js"></script>
-    
+    <script src="/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
   </head>
 	<body>
