Update quick start guide

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -48,9 +48,32 @@
 			<% } %>
 
             <h2>Quick Start</h2>
-            <h4>Install</h4>
+            <h3>Online Editor</h3>
+            You don't have to use the Windows client in order to use syncpad, while the Windows client lets you use syncpad without having to keep a browser window open, you can easily share your editor
+            with another user by just creating a new editor room with the online editor and then sharing the url and the room password that you set.<br/>
+            <br/>
+            <h4>Creating a new Online Editor</h4>
+            In order to create a new Online Editor, while logged in, you navigate to <a href="/editor">https://syncpad.ikonzeh.org/editor</a> (or click the <a href="/editor">'Create Editor'</a> button above) 
+            which will create a new editor room for you using a random ID.
+            <br/><br/>
+            When you go to the 'Create Editor' screen, you will be prompted to set a new password for the editor room you are creating. This is the password that other users must enter to join 
+            your editor room, so remember it.
+            <br/>
+            Once you create the new editor room, you will be dropped into the editor window where you can start sharing text.
+            <br/><br/>
+            <b>Note:</b> You can create a room by any ID by just going to <a href="#">https://syncpad.ikonzeh.org/editor/YOUR_ROOM_ID_HERE</a> where <i>YOUR_ROOM_ID_HERE</i> is a unique value and not used in an existing room.
+            <br/><br/>
+            <h4>Joining an existing Online Editor</h4>
+            You can join an existing room that another user created (either with the Windows client or online) by just going to the editor room url, which looks like the following, 
+            with 'ThisIsATestRoom' being the room ID: <a href="/editor/ThisIsATestRoom">https://syncpad.ikonzeh.org/editor/ThisIsATestroom</a>.
+            <br/><br/>
+            When you join an existing room, you will be prompted to enter the password required to join the room. If you do not know the password, you will be unable to join the room.
+            <br/><br/>
+
+            <h3>Windows Client</h3>
+            <h4>Install Client</h4>
             You already have an account, otherwise you wouldn't be able to see this page, so we'll skip that part.<br/><br/>
-            You have to download the syncpad-client and install it. You can download it <a href="https://ikonzeh.org/projects/syncpad/releases/x64/syncpad-0.4.1-setup">here</a>.<br/>
+            You have to download the syncpad-client and install it. You can download it <a href="https://ikonzeh.org/projects/syncpad/releases/x64/syncpad-0.4.1-setup">here (x64)</a>.<br/>
             Once you download and install syncpad-client, you will have a shortcut on your desktop.
 
             <br/><br/>
