--- a/views/editor/editor.ejs
+++ b/views/editor/editor.ejs
@@ -251,7 +251,7 @@
                 "background-color": "#B6E2FE",
                 "padding": "5px",
                 "color" : "#000000",
-                "border-color" : "#000000",
+                "border" : "1px solid #000000",
                 "border-radius": "4px"
                 }
             },
