Update home page link

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -73,7 +73,7 @@
             <h3>Windows Client</h3>
             <h4>Install Client</h4>
             You already have an account, otherwise you wouldn't be able to see this page, so we'll skip that part.<br/><br/>
-            You have to download the syncpad-client and install it. You can download it <a href="https://ikonzeh.org/projects/syncpad/releases/x64/syncpad-0.4.1-setup">here (x64)</a>.<br/>
+            You have to download the syncpad-client and install it. You can download it <a href="https://ikonzeh.org/projects/syncpad/releases/x64/syncpad-0.4.2-setup.exe">here (x64)</a>.<br/>
             Once you download and install syncpad-client, you will have a shortcut on your desktop.
 
             <br/><br/>
