--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,6 +14,7 @@
         <li class="active"><a href="/">Home</a></li>
         <li><a href="/profile">My Profile</a></li>
         <li><a href="/editor">Create Editor</a></li>
+        <li><a href="/e">Create Editor (Short ID)</a></li>
 
         <% if (user.role == 'admin') { %>
           <li><a href="/users">User List</a></li>
